@@ -26,6 +26,7 @@ Revision history for Rex
  - Use Symbol to manipulate Perl symbols
  - Add initial rsync tests
  - Test rsync with spaces in source path
+ - Test rsync with wildcard in source path
 
 1.11.0 2020-06-05 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
